Add support for -XX:+ExtensiveErrorReports.